
      - 32% faster message rates on OpenPower (POWER 9), I think due
        to decreased use of atomic data structures that are not well
        optimized for the platform. Now POWER 9 performance lines up
        much better with other benchmarks vs x86_64.

      - 17% faster message rates on ARM (A72) and x86_64 (Skylake)

      - 20% less memory overhead per published value

  - Documented the rpc module.

  - rpc protocol now allows procedure arguments to be specified
    multiple times. The server side will receive a list of all values
    specified for each key.

  - the rpc client now includes internal synchronization to prevent
    errors when the same procedure is called concurrently from the
    same subscriber instance.

  - fix: in bscript multiple concurrent rpc calls to the same function
    could result in return values getting mixed up or duplicated.

  - new tool, container, a persistant, bscript enabled, value
    store. Kinda like a distributed spreadsheet. Kinda like a nosql
    database server. Kinda just it's own thing. Using sled for
    persistant storage.

* 0.8.0 netidx, protocols, netproto, tools, browser:
  - The command line publisher can now accept writes, simply say
    WRITE|PATH to enable writes for PATH. Written values will be sent
    to stdout in the same format as the command line subscriber. PATH
    will be published with a value of null if it hasn't been published
    previously

  - Crate cleanup: netidx-protocols was split into 3 crates
    - netidx-bscript: The bscript parser, and vm implementation
    - netidx-archive: The archive file reader/writer library
    - netidx-protocols: Actual protocols built on top of netidx

  - the big bscript refactor: The bscript VM along with the
    implementation of the core of the language was moved out of the
    browser and combined with the parser, which was moved out of
    netidx-protocols to form netidx-bscript. Now it should be possible